# MathLibrary

./: .travis.yml  CMakeLists.txt  Main.cpp  README.md  ToDo.cpp  bitbucket-pipelines.yml  main.cpp
BlackBoxMath.xcodeproj/: project.pbxproj
BlackBoxMath.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BlackBoxMathLibrary/: CMakeLists.txt  Makefile
BlackBoxMathLibrary/unit_test/: CMakeLists.txt  ToDoTest  ToDoTest.cc
CMake/: GoogleTestModule.cmake
CMake/Modules/: GoogleTestModule.cmake
Libraries/GoogleTest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Libraries/GoogleTest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Scripts/: BuildDebugProject.sh  BuildReleaseProject.sh  CleanProject.sh  LintFiles.sh  TestProject.sh  tasks.json
Source/: BlackBoxMath.cpp  BlackBoxMath.hpp  Color.hpp  Color.inl  LogSystem.cpp  LogSystem.hpp  Logging.cpp  Logging.hpp  Main.cpp  Matrix.hpp  Matrix.inl  NormalizedVector.hpp  Rectangle.hpp  Rectangle.inl  Utilities.hpp  Utilities.inl  Vector.hpp  Vector.inl
Tests/: BlackBoxMathTest.cpp  CMakeLists.txt  ColorTests.mm  SpeedTest.hpp  Tests.m  UtilitiesTests.mm  Vector2fTest.cpp  Vector2fTest.hpp  Vector3fTest.cpp  Vector4fTest.cpp
ToDoCore/: CTestTestfile.cmake  cmake_install.cmake
ToDoCore/unit_test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
